--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,280 @@
 .App {
-  text-align: center;
+  font-family: sans-serif;
+}
+.my-header {
+  margin: 0 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main {
+  display: flex;
+  justify-content: space-evenly;
+  height: 850px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.left-main {
+  background-color: #fff;
+  width: 50%;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.right-main {
+  background-color: rgb(255, 208, 0);
+  width: 50%;
+}
+
+.MM {
+  display: flex;
+  flex-direction: column;
+}
+.imgs {
+  display: flex;
+  flex-direction: column;
+  margin-top: -850px;
+  z-index: 1;
+}
+.ofcbuild1 {
+  width: 380px;
+  height: 220px;
+  border-radius: 5%;
+  margin-top: 50px;
+  margin-left: 400px;
+  z-index: 2;
+}
+.ofcbuild2 {
+  width: 370px;
+  height: 185px;
+  border-radius: 5%;
+  margin-top: -50px;
+  margin-left: 580px;
+}
+.ofcbuild3 {
+  width: 250px;
+  height: 180px;
+  border-radius: 5%;
+  margin-top: -25px;
+  margin-left: 370px;
+}
+
+.ofc-content {
+  width: 350px;
+  height: 260px;
+  background-color: #fff;
+  margin-top: -80px;
+  margin-left: 540px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  border-radius: 5%;
+  padding: 30px;
+  line-height: 2rem;
+}
+
+.ofc-content h1 {
+  margin-top: 0px;
+  font-size: 18px;
+  font-weight: bolder;
+}
+
+.ofc-content .ofc-con-1 {
+  font-size: xx-large;
+  font-weight: bolder;
+  margin: 0;
+}
+
+.Arch {
+  height: 300px;
+
+  margin-top: 50px;
+}
+.Arch-hpg {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.Arch-heading {
+  margin-top: 70px;
+  font-size: 42px;
+  color: rgb(3, 7, 64);
+  font-weight: bolder;
+  font-family: cursive;
 }
 
-.App-link {
-  color: #61dafb;
+.Arch-pg {
+  margin-top: 30px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Arch-apur {
+  margin: 0 100px;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.ar {
+  display: flex;
+  flex-direction: column;
+  height: 250px;
+  width: 250px;
+  background-color: #fff;
+  margin-top: 50px;
+}
+.ar p {
+  font-weight: bold;
+  font-size: 18px;
+}
+
+.ar > * {
+  margin: 10px 20px;
+}
+
+.aboutus {
+  background-color: rgb(20, 23, 72);
+  height: 850px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  color: #fff;
+}
+.abtus-left > *,
+.abtus-right > * {
+  margin: 0;
+  padding: 0;
+}
+
+.abtus-left {
+  margin-top: 100px;
+  margin-left: 100px;
+  height: auto;
+  width: 400px;
+  padding: 50px;
+}
+
+.abtus-left h4 {
+  letter-spacing: 0.2rem;
+  font-weight: bolder;
+  margin-bottom: 15px;
+}
+
+.abtus-left h2 {
+  letter-spacing: 0.2rem;
+  font-size: 36px;
+  font-weight: bolder;
+}
+
+.abtus-left p {
+  margin-top: 30px;
+  letter-spacing: 0.1rem;
+  font-size: 15px;
+}
+
+.abtus-right {
+  margin-top: 100px;
+  margin-right: 100px;
+  height: auto;
+  width: 500px;
+  padding: 50px;
+}
+
+.abtus-right h4 {
+  letter-spacing: 0.1rem;
+  font-weight: bolder;
+  font-size: 24px;
+  margin-bottom: 15px;
+}
+
+.abtus-right h5 {
+  letter-spacing: 0.2rem;
+  font-size: 18px;
+  font-weight: bolder;
+  margin-bottom: 15px;
+}
+
+.abtus-right p {
+  letter-spacing: 0.1rem;
+  font-size: 14px;
+  margin-bottom: 15px;
+}
+
+.best-main {
+  height: 700px;
+}
+
+.drawing {
+  width: 350px;
+  height: 300px;
+  border-radius: 5%;
+  margin-top: -80px;
+  margin-left: 370px;
+  position: absolute;
+  z-index: 4;
+}
+.color {
+  margin-top: 70px;
+  position: absolute;
+  right: 0;
+  height: 250px;
+  width: 60%;
+  display: flex;
+  background-color: rgb(255, 208, 0);
+}
+.best-sub {
+  margin-top: 150px;
+  position: absolute;
+  z-index: 5;
+  right: 160px;
+  padding: 30px;
+  border-radius: 5%;
+  background-color: #fff;
+  height: 400px;
+  width: 500px;
+  display: flex;
+  flex-direction: column;
+}
+
+.best-sub h2 {
+  font-size: 36px;
+}
+.best-sub p {
+  margin-top: -10px;
+  font-size: 17px;
+}
+
+.AboutComp {
+  display: flex;
+  height: 500px;
+}
+
+.AboutComp-left {
+  background-color: rgb(20, 23, 72);
+  width: 50%;
+}
+.AboutComp-right {
+  background-color: rgb(255, 208, 0);
+  width: 50%;
+}
+
+.apartment {
+  width: 350px;
+  height: 350px;
+  border-radius: 5%;
+  margin-top: 80px;
+  margin-left: 450px;
+  position: absolute;
+}
+.abtcmp-R {
+  margin-top: 80px;
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.abtcmp-R h3 {
+  font-size: 36px;
+}
+.abtcmp-R p {
+  margin-top: -20px;
+  margin-bottom: 30px;
+  font-size: 18px;
+  line-height: 1.8rem;
+  text-align: justify;
 }
