--- a/src/App.css
+++ b/src/App.css
@@ -461,3 +461,71 @@
   width: 100%;
   height: 600px;
 }
+
+.MuiOutlinedInput-root {
+  border-radius: 100px !important;
+  height: 50px;
+}
+.Ex-offrs {
+  background-color: #fff;
+  height: 600px;
+  width: 800px;
+  border-radius: 5%;
+  position: absolute;
+  margin-top: -250px;
+  text-align: center;
+  margin-left: 250px;
+  margin-right: 300px;
+}
+.Ex-offrs h2 {
+  margin-top: 50px;
+  font-weight: bolder;
+  font-size: 28px;
+}
+.Ex-offrs p {
+  line-height: 2rem;
+  margin-left: 200px;
+  margin-right: 200px;
+}
+.message {
+  width: 600px;
+  height: 200px;
+}
+.outline {
+  margin-right: 30px;
+}
+.MuiInputLabel-root {
+  font-size: 0.8rem !important;
+  color: #666 !important;
+}
+
+.fields {
+  display: flex;
+  margin-left: 75px;
+}
+.fields > .outline {
+  margin-right: 20px;
+}
+.outlined-number {
+  margin-right: 0;
+}
+
+.message-field {
+  margin-bottom: 20px;
+}
+
+.footer {
+  margin-top: auto;
+  width: 100%;
+  height: 120px;
+  background-color: #444;
+  color: #fff;
+  font-size: 20px;
+}
+.footer-content p {
+  position: absolute;
+  text-align: center;
+  margin-top: 40px;
+  margin-left: 370px;
+  margin-right: 400px;
+}
